--- a/tareabodega/src/main/resources/application.properties
+++ b/tareabodega/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8083
 spring.application.name=idat-bodega
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/idat-julio
+spring.datasource.url=jdbc:mysql://localhost:3306/idat-tarea
 spring.datasource.username=root
 spring.datasource.password=loqueloco
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
